--- a/src/app/todos-signals/comps/todos-list/todos-list.component.scss
+++ b/src/app/todos-signals/comps/todos-list/todos-list.component.scss
@@ -3,6 +3,8 @@
 
 :host {
     @include sandboxMixin.flexboxLayout(column, flex-start, center);
+    @include sandboxMixin.border1();
+    padding: 20px;
     width: 500px;
     
     .todos-list, .todo-input {
