--- a/src/app/todos-signals/comps/todos-view/todos-view.component.scss
+++ b/src/app/todos-signals/comps/todos-view/todos-view.component.scss
@@ -9,6 +9,7 @@
     
     .todos-view-container {
         @include sandboxMixin.flexboxLayout(column, center, center);
+        gap: 50px;
         width: 100%;
     }
 }
